--- a/WebContent/index.xhtml
+++ b/WebContent/index.xhtml
@@ -9,7 +9,7 @@
 
 	<title>Partidas</title>   
 </head>
-
+<f:event listener="#{partidaMBean.carregarListaPartidas()}" type="preRenderView"></f:event>
 <h:body>
 
 	<h:form>
@@ -25,11 +25,13 @@
 		  
 		  <ul class="navbar-nav loat-right">
 		  	<li>
-		    	<h:commandLink id="cadastrarPartida" value="Cadastrar Partida" action="#{partidaMBean.listarPartidas()}" styleClass="btn btn-success"/>
+		    	<h:commandLink id="cadastrarPartida" value="Cadastrar Partida" action="#{partidaMBean.cadastrarPartida}" styleClass="btn btn-success"/>
 		    </li>
 		  </ul>
 		
 		</nav>
+	
+		<h:messages errorClass="alert alert-danger" infoClass="alert alert-success"/>
 	
 		<div class="container my-3">
 			<div class="card">
@@ -57,6 +59,12 @@
 							<h:outputText value="#{partida.data}" >
 								<f:convertDateTime pattern="dd/MM/yyyy"/>
 							</h:outputText>
+						</h:column>
+						<h:column>
+							<h:commandLink action="#{partidaMBean.visualizarPartida(partida.id)}" title="Visualizar"><i class="fas fa-eye"></i></h:commandLink>
+						</h:column>
+						<h:column>
+							<h:commandLink action="#{partidaMBean.removerPartida(partida.id)}" title="Remover"><i class="fas fa-trash"></i></h:commandLink>
 						</h:column>
 					</h:dataTable>
 				</div>
