--- a/WebContent/index.xhtml
+++ b/WebContent/index.xhtml
@@ -36,7 +36,7 @@
 		<div class="container my-3">
 			<div class="card">
 				<div class="card-header bg-primary">
-					<h3 style="color:white;">Lista de Partitas</h3>
+					<h3 style="color:white;">Lista de Partidas</h3>
 				</div>
 				<div class="card-body">
 					<h:dataTable id="listaPartidas" value="#{partidaMBean.partidas}" var="partida" styleClass="table">
